--- a/quiz_gen/static/quiz_gen/css/quiz_gen.css
+++ b/quiz_gen/static/quiz_gen/css/quiz_gen.css
@@ -3,23 +3,6 @@
 body {
     text-align: center;
 }
-button {
-    background: var(--main-purple);
-    border: 1px solid black;
-    padding: 10px 30px;
-    color: white;
-    font-size: 16px;
-    font-weight: bold;
-    text-decoration: none;
-    display: inline-block;
-    cursor: pointer;
-    transition: 0.1s linear;
-}
-button:hover {
-    background: var(--main-yellow);
-    color: black;
-    transform: scale(1.01);
-}
 
 /* Disable textarea resizing */
 textarea {
@@ -48,4 +31,35 @@ a#more-options:hover {
 }
 .collapsable {
     display: none;
+}
+
+/* Overridden modal styles */
+.app-modal-content p {
+    font-size: 0.8rem;
+    margin: 30px 0;
+}
+.app-modal-content img {
+    width: 90%;
+    margin: 0 5%;
+}
+/* Modal next/previous buttons */
+.app-modal-content a.modal-nav {
+    position: absolute;
+    background: none;
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 0.75rem;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+.app-modal-content a.modal-nav:hover {
+transform: scale(1.1);
+}
+.app-modal-content a#previous-slide {
+    bottom: 1rem;
+    left: 2rem;
+}
+.app-modal-content a#next-slide {
+    bottom: 1rem;
+    right: 2rem;
 }
