Create photography page

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -10,6 +10,7 @@
 {% block content %}
 <div class="content">
     <h1>MrWang.co.uk</h1>
+    <p>Welcome to Mr Wang&apos;s website! Here you will find educational resources, tools, and other fun projects.</p>
     <hr>
 
     <h4>Educational Resources</h4>
@@ -27,6 +28,9 @@
     <div class="content-grid">
         <a class="grid-button" href="{% url 'about' %}">
             About this Website
+        </a>
+        <a class="grid-button" href="{% url 'photography' %}">
+            Photography
         </a>
         <a class="grid-button" href="{% url 'projects' %}">
             Other projects
