--- a/app/templates/app/photography.html
+++ b/app/templates/app/photography.html
@@ -10,14 +10,14 @@
 {% block content %}
 <div class="content">
     <h1>Photography</h1>
-    <p>A few highlights...</p>
+    <p>Some highlights over the years - click to view the full image.</p>
     <hr>
 
     {% for year, images in galleries.items %}
         <h2 class="year-title">{{ year }}</h2>
         <div class="gallery">
         {% for image in images %}
-            <img src="{% static image %}" alt="Gallery image" class="thumb">
+            <img src="{% static image %}" alt="Gallery image" class="thumb" loading="lazy">
         {% endfor %}
         </div>
         <br><hr>
