add intro slide to quiz_gen guide

--- a/quiz_gen/templates/quiz_gen/quiz_gen.html
+++ b/quiz_gen/templates/quiz_gen/quiz_gen.html
@@ -84,6 +84,7 @@
 {% block js %}
 <script>
   window.quizImages = {
+    slide0: "{% static 'quiz_gen/images/slide0.png' %}",
     slide1: "{% static 'quiz_gen/images/slide1.png' %}",
     slide2: "{% static 'quiz_gen/images/slide2.gif' %}",
     slide3: "{% static 'quiz_gen/images/slide3.gif' %}",
