reorganise images folder, add photography page into projects page

--- a/app/templates/app/projects.html
+++ b/app/templates/app/projects.html
@@ -10,16 +10,16 @@
     
     <div class="content-grid">
         <div class="grid-button" 
-            data-app-name="New projects coming soon"
-            data-app-desc="Check in again for future progress!"
-            data-app-img="{% static 'app/images/under-construction.jpg' %}"
-            data-app-link="">
-            Coming Soon
+            data-app-name="Photography"
+            data-app-desc="Some highlights from my photography hobby"
+            data-app-img="{% static 'app/images/thumbnails/photography-thumbnail.jpg' %}"
+            data-app-link="{% static 'photography' %}">
+            Photography
         </div>
         <div class="grid-button" 
             data-app-name="New projects coming soon"
             data-app-desc="Check in again for future progress!"
-            data-app-img="{% static 'app/images/under-construction.jpg' %}"
+            data-app-img="{% static 'app/images/thumbnails/under-construction.jpg' %}"
             data-app-link="">
             Coming Soon
         </div>
