--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -12,14 +12,14 @@
         <div class="grid-button" 
             data-app-name="N5 Computing Notes"
             data-app-desc="View and download Mr Wang's National 5 Computing Science notes"
-            data-app-img="{% static 'app/images/n5-thumbnail.png' %}"
+            data-app-img="{% static 'app/images/thumbnails/n5-thumbnail.png' %}"
             data-app-link="{% url 'pupil_resources' %}">
             N5 Computing Notes
         </div>
         <div class="grid-button" 
             data-app-name="New projects coming soon"
             data-app-desc="Check in again for future progress!"
-            data-app-img="{% static 'app/images/under-construction.jpg' %}"
+            data-app-img="{% static 'app/images/thumbnails/under-construction.jpg' %}"
             data-app-link="">
             Coming Soon
         </div>
