--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -10,11 +10,11 @@
     
     <div class="content-grid">
         <div class="grid-button" 
-            data-app-name="N5 Computing Notes"
-            data-app-desc="View and download Mr Wang's National 5 Computing Science notes"
+            data-app-name="Subject Resources"
+            data-app-desc="View and download resources by subject"
             data-app-img="{% static 'app/images/thumbnails/n5-thumbnail.png' %}"
-            data-app-link="{% url 'pupil_resources' %}">
-            N5 Computing Notes
+            data-app-link="{% url 'subjects' %}">
+            Subject Resources
         </div>
         <div class="grid-button" 
             data-app-name="New projects coming soon"
