setup subject database and add templates

--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -13,7 +13,7 @@
             data-app-name="Subject Resources"
             data-app-desc="View and download resources by subject"
             data-app-img="{% static 'app/images/thumbnails/n5-thumbnail.png' %}"
-            data-app-link="{% url 'subjects' %}">
+            data-app-link="{% url 'subject_list' %}">
             Subject Resources
         </div>
         <div class="grid-button" 
