--- a/subjects/templates/subjects/subject_detail.html
+++ b/subjects/templates/subjects/subject_detail.html
@@ -20,7 +20,7 @@
   <h2>Modules</h2>
   <ul>
     {% for module in modules %}
-      <li><a href="{% url 'module_detail' module.id %}">{{ module.name }}</a></li>
+      <li><a href="{% url 'module_detail' subject.slug module.slug %}">{{ module.name }}</a></li>
     {% empty %}
       <li>No modules yet.</li>
     {% endfor %}
