remove pupil resources from app static folder

--- a/app/templates/app/pupil/pupil.html
+++ b/app/templates/app/pupil/pupil.html
@@ -12,7 +12,7 @@
         <div class="grid-button" 
             data-app-name="Subject Resources"
             data-app-desc="View and download resources by subject"
-            data-app-img="{% static 'app/images/thumbnails/n5-thumbnail.png' %}"
+            data-app-img="{% static 'app/images/thumbnails/subject-thumbnail.jpg' %}"
             data-app-link="{% url 'subject_list' %}">
             Subject Resources
         </div>
