--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -18,8 +18,8 @@
         <a class="grid-button" href="{% url 'teacher' %}">
             Teacher Resources
         </a>
-        <a class="grid-button" href="{% url 'pupil' %}">
-            Pupil Resources
+        <a class="grid-button" href="{% url 'subject_list' %}">
+            Pupil Resources by Subject
         </a>
     </div>
     <br><hr>
@@ -29,11 +29,8 @@
         <a class="grid-button" href="{% url 'about' %}">
             About this Website
         </a>
-        <a class="grid-button" href="{% url 'photography' %}">
-            Photography
-        </a>
         <a class="grid-button" href="{% url 'projects' %}">
-            Other projects
+            Other Stuff
         </a>
     </div>
     <br>
