--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -8,6 +8,7 @@
   
   <h1>{{ module.name }}</h1>
   <h2>Documents</h2>
+  <p>Click on a document to download to your device.</p>
   <ul>
     {% for doc in documents %}
       <li>
