--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -9,8 +9,8 @@
 
 {% block content %}
 <div class="content">
-    <h1>MrWang.co.uk</h1>
-    <p>Welcome to Mr Wang&apos;s website! Here you will find educational resources, tools, and other fun projects.</p>
+    <h1>Mr Wang&apos;s Website</h1>
+    <p>Here you will find educational resources, tools, and other fun stuff!</p>
     <hr>
 
     <h4>Educational Resources</h4>
@@ -18,7 +18,7 @@
         <a class="grid-button" href="{% url 'teacher' %}">
             Teacher Resources
         </a>
-        <a class="grid-button" href="{% url 'subject_list' %}">
+        <a class="grid-button" href="{% url 'subjects' %}">
             Pupil Resources by Subject
         </a>
     </div>
