--- a/subjects/templates/subjects/subject_home.html
+++ b/subjects/templates/subjects/subject_home.html
@@ -3,6 +3,10 @@
 
 {% block title %}Subjects{% endblock %}
 
+{% block css %}
+<link rel="stylesheet" href="{% static 'subjects/css/subjects.css' %}">
+{% endblock %}
+
 {% block content %}
 <div class="content">
   <h1>Subject Resources</h1>
