--- a/app/static/app/css/global.css
+++ b/app/static/app/css/global.css
@@ -30,7 +30,7 @@ body {
 nav, .content {
   background-color: white;
   border-radius: 10px;
-  padding: 2rem;
+  padding: 1.5rem 2rem;
   max-width: 700px;
   margin: 0 auto 20px auto;
 }
