--- a/app/static/app/css/global-mobile.css
+++ b/app/static/app/css/global-mobile.css
@@ -12,7 +12,7 @@
     nav, .content {
         background-color: white;
         border-radius: 0;
-        padding: 10px 0;
+        padding: 12px 0 50px 0;
         margin: 10px 0;
         width: 100%;
     }
@@ -72,8 +72,7 @@
 
     /* Grid buttons */
     .content-grid {
-        flex-direction: column;
-        gap: 1rem;
+        grid-template-columns: 1fr;
         padding: 0 2rem;
         height: 400px;
     }
