--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -17,11 +17,10 @@
   <h1>{{ module.name }}</h1>
   <h2>Documents</h2>
   <p>Click on a document to download to your device.</p>
-  <ul>
+
+  <ul class="subject-link-container">
     {% for doc in documents %}
-      <li>
-        <a href="{{ doc.file.url }}">{{ doc.name }}</a>
-      </li>
+      <a class="subject-link" href="{{ doc.file.url }}">{{ doc.name }}</a>
     {% empty %}
       <li>No documents yet.</li>
     {% endfor %}
