--- a/subjects/templates/subjects/subject_detail.html
+++ b/subjects/templates/subjects/subject_detail.html
@@ -18,13 +18,15 @@
 
   <h2>Useful Links</h2>
   <p>Click on a link to open it in a new tab.</p>
-  <ul>
+  <ul class="subject-link-container">
     {% for link in links %}
-      <li><a href="{{ link.url }}" target="_blank">{{ link.name }}</a></li>
+      <a class="subject-link" href="{{ link.url }}" target="_blank">{{ link.name }}</a>
     {% empty %}
       <li>No links yet.</li>
     {% endfor %}
   </ul>
+
+  <hr>
 
   <h2>Modules</h2>
   <div class="content-grid">
