attempt to add PDF previews in addition to officeapps

--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -20,7 +20,7 @@
 
   <ul class="subject-link-container">
     {% for doc in documents %}
-      <div class="subject-link"
+      <div role="button" class="subject-link"
         data-file-name="{{ module.name }}: {{ doc.name }}"
         data-file-link="{{ doc.file.url }}">
         {{ doc.name }}
