--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -41,12 +41,13 @@
             width="100%" height="100%" frameborder="0">
           </iframe>
         </div>
+        <a id="modalLink" class="launch-btn">Download</a>
     </div>
   </div>
 
 </div>
 {% endblock %}
-#
+
 
 {% block js %}
 <script src="{% static 'subjects/js/subjects.js' %}"></script>
