--- a/app/static/app/css/global.css
+++ b/app/static/app/css/global.css
@@ -286,7 +286,7 @@ h4 {
   border: 1px solid black;
   padding: 10px 30px;
   color: white;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: bold;
   text-decoration: none;
   display: inline-block;
