add quiz geneate button to document preview modal

--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -42,6 +42,7 @@
           </iframe>
         </div>
         <a id="modalLink" class="launch-btn">Download</a>
+        <a id="modalLink" class="launch-btn">Generate Quiz</a>
     </div>
   </div>
 
