--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -22,7 +22,7 @@
     {% for doc in documents %}
       <div role="button" class="subject-link"
         data-file-name="{{ module.name }}: {{ doc.name }}"
-        data-file-link="{{ doc.file.url }}">
+        data-file-path="{{ doc.file.url }}">
         {{ doc.name }}
       </div>
     {% empty %}
