--- a/app/templates/app/projects.html
+++ b/app/templates/app/projects.html
@@ -13,7 +13,7 @@
             data-app-name="Photography"
             data-app-desc="Some highlights from my photography hobby"
             data-app-img="{% static 'app/images/thumbnails/photography-thumbnail.jpg' %}"
-            data-app-link="{% static 'photography' %}">
+            data-app-link="{% url 'photography' %}">
             Photography
         </div>
         <div class="grid-button" 
