--- a/subjects/templates/subjects/generated_quiz.html
+++ b/subjects/templates/subjects/generated_quiz.html
@@ -15,9 +15,13 @@
     <a href="javascript:history.back()" class="back-button">&lt; Back to Module</b></a>
   </div>
 
+  <h1>Generated Quiz</h1>
+  <p>This quiz was generated using the resource you selected. AI can make errors, so ask your teacher if you don&apos;t understand a question.</p>
+
   <div class="quiz-container">
-    <h1>Generated Quiz</h1>
+    <h4 id="quizResult">Select your answers and click &quot;Submit Quiz&quot; to see your score.</h4>
     <br><hr><br>
+
     <form id="quizForm">
         {% for q in quiz_questions %}
         <div class="quiz-question" data-correct="{{ q.correct_answer }}">
@@ -34,10 +38,9 @@
           </ul>
         </div>
         <br><hr><br>
-      {% endfor %}
+        {% endfor %}
       <button type="button" class="launch-btn" onclick="submitQuiz()">Submit Quiz</button>
     </form>
-    <p id="quizResult"></p>
   </div>
 </div>
 
