remove title from gallery photos, add and style location text.
add back button to global styles, not just subjects

--- a/app/static/app/css/global.css
+++ b/app/static/app/css/global.css
@@ -299,3 +299,17 @@ h4 {
   color: black;
   transform: scale(1.01);
 }
+
+/* Back to previous page button */
+.back-button {
+  display: inline-block;
+  padding: 0.5rem 0.5rem;
+  text-decoration: none;
+  font-size: 0.8rem;
+  color: var(--main-gray);
+  transition: 0.1s ease-in-out;
+}
+
+.back-button:hover {
+  transform: scale(1.05);
+}
