--- a/app/templates/app/projects.html
+++ b/app/templates/app/projects.html
@@ -10,11 +10,11 @@
     
     <div class="content-grid">
         <div class="grid-button" 
-            data-app-name="Photography"
+            data-app-name="Photo Gallery"
             data-app-desc="Some highlights from my photography hobby"
             data-app-img="{% static 'app/images/thumbnails/photography-thumbnail.jpg' %}"
-            data-app-link="{% url 'photography' %}">
-            Photography
+            data-app-link="{% url 'gallery_overview' %}">
+            Photo Gallery
         </div>
         <div class="grid-button" 
             data-app-name="New projects coming soon"
