rename gallery overview to gallery home

--- a/app/templates/app/projects.html
+++ b/app/templates/app/projects.html
@@ -13,7 +13,7 @@
             data-app-name="Photo Gallery"
             data-app-desc="Some highlights from my photography hobby"
             data-app-img="{% static 'app/images/thumbnails/photography-thumbnail.jpg' %}"
-            data-app-link="{% url 'gallery_overview' %}">
+            data-app-link="{% url 'gallery_home' %}">
             Photo Gallery
         </div>
         <div class="grid-button" 
