--- a/gallery/templates/gallery/year.html
+++ b/gallery/templates/gallery/year.html
@@ -11,7 +11,7 @@
 <div class="content">
 
     <div>
-        <a href="{% url 'gallery_overview' %}" class="back-button">&lt; Back to <b>Gallery</b></a>
+        <a href="{% url 'gallery_home' %}" class="back-button">&lt; Back to <b>Gallery</b></a>
     </div>
 
     <h1>Photos from {{ year }}</h1>
