--- a/subjects/templates/subjects/module_detail.html
+++ b/subjects/templates/subjects/module_detail.html
@@ -14,7 +14,7 @@
 
 <h1>{{ module.name }}</h1>
 <h2>Documents</h2>
-<p>Click on a document to download to your device.</p>
+<p>Select a lesson from the list below:</p>
 
 <ul class="subject-link-container">
   {% for doc in documents %}
