create and initial setup - code_puzzles app

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -17,8 +17,8 @@
     <a class="grid-button" href="{% url 'teacher' %}">
         Teacher Resources
     </a>
-    <a class="grid-button" href="{% url 'subjects' %}">
-        Pupil Resources by Subject
+    <a class="grid-button" href="{% url 'pupil' %}">
+        Pupil Resources
     </a>
 </div>
 <br><hr>
