--- a/app/templates/app/pupil.html
+++ b/app/templates/app/pupil.html
@@ -12,15 +12,15 @@
         data-app-name="Subject Resources"
         data-app-desc="View and download resources by subject"
         data-app-img="{% static 'app/images/thumbnails/subject-thumbnail.jpg' %}"
-        data-app-link="{% url 'subject_list' %}">
+        data-app-link="{% url 'subjects' %}">
         Subject Resources
     </div>
     <div class="grid-button" 
-        data-app-name="New projects coming soon"
-        data-app-desc="Check in again for future progress!"
-        data-app-img="{% static 'app/images/thumbnails/under-construction.jpg' %}"
-        data-app-link="">
-        Coming Soon
+        data-app-name="Code Puzzles"
+        data-app-desc="A revision tool for Computing Science."
+        data-app-img="{% static 'app/images/thumbnails/n5-thumbnail.png' %}"
+        data-app-link="{% url 'puzzle_home' %}">
+        Code Puzzles
     </div>
 </div>
 <br>
