add view_examples page

--- a/app/templates/app/about.html
+++ b/app/templates/app/about.html
@@ -5,7 +5,7 @@
 
 {% block css %}
 <!-- Prism.js CSS for code snippet formatting -->
-<link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet" />
+<link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-tomorrow.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'app/css/about.css' %}">
 {% endblock %}
 
