--- a/code_puzzles/templates/code_puzzles/puzzle_home.html
+++ b/code_puzzles/templates/code_puzzles/puzzle_home.html
@@ -10,6 +10,14 @@
 {% block content %}
 <h1>Code Puzzles</h1>
 
+<div class="content-grid">
+      <a class="grid-button" href="{% url 'view_examples' %}">
+          View VB Code Examples
+      </a>
+      <a class="grid-button" href="">
+          Revise Code
+      </a>
+</div>
 
 {% endblock %}
 
