--- a/code_puzzles/static/code_puzzles/css/puzzle.css
+++ b/code_puzzles/static/code_puzzles/css/puzzle.css
@@ -1,1 +1,11 @@
 /* Styles for code puzzles page */
+
+/* Reduce code size on mobile view */
+@media only screen and (max-width: 600px) {
+    code {
+        font-size: 1rem !important;
+    }
+    select {
+        font-size: larger;
+    }
+}
