--- a/code_puzzles/templates/code_puzzles/puzzle_home.html
+++ b/code_puzzles/templates/code_puzzles/puzzle_home.html
@@ -4,7 +4,7 @@
 {% block title %}Code Puzzles{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'code_puzzles/css/puzzle.css' %}">
+<link rel="stylesheet" href="{% static 'code_puzzles/css/puzzle_home.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
       <a class="grid-button" href="{% url 'view_examples' %}">
           View VB Code Examples
       </a>
-      <a class="grid-button" href="">
+      <a class="grid-button" href="{% url 'play' %}">
           Revise Code
       </a>
 </div>
@@ -22,5 +22,5 @@
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'code_puzzles/js/puzzle.js' %}"></script>
+<script src="{% static 'code_puzzles/js/puzzle_home.js' %}"></script>
 {% endblock %}
