add reordering puzzle functionality

--- a/code_puzzles/templates/code_puzzles/puzzle_home.html
+++ b/code_puzzles/templates/code_puzzles/puzzle_home.html
@@ -11,12 +11,12 @@
 <h1>Code Puzzles</h1>
 
 <div class="content-grid">
-      <a class="grid-button" href="{% url 'view_examples' %}">
-          View VB Code Examples
-      </a>
-      <a class="grid-button" href="{% url 'play' %}">
-          Revise Code
-      </a>
+    <a class="grid-button" href="{% url 'play' %}">
+        Play Puzzle
+    </a>
+    <a class="grid-button" href="{% url 'view_examples' %}">
+        Revise Code Examples
+    </a>
 </div>
 
 {% endblock %}
