rename view_examples to examples, add SDD url to code example page

--- a/code_puzzles/templates/code_puzzles/examples.html
+++ b/code_puzzles/templates/code_puzzles/examples.html
@@ -56,7 +56,7 @@
     </div>
 {% else %}
     <div id="toLessonBtn">
-        <a class="launch-btn" href="" target="_blank">Go to SDD Lessons</a>
+        <a class="launch-btn" href="{% url 'subject_detail' 'n5-computing-science' %}" target="_blank">Go to SDD Lessons</a>
     </div>
 {% endif %}
 
