--- a/code_puzzles/templates/code_puzzles/puzzle_home.html
+++ b/code_puzzles/templates/code_puzzles/puzzle_home.html
@@ -14,7 +14,7 @@
     <a class="grid-button" href="{% url 'play' %}">
         Play Puzzle
     </a>
-    <a class="grid-button" href="{% url 'view_examples' %}">
+    <a class="grid-button" href="{% url 'examples' %}">
         Revise Code Examples
     </a>
 </div>
